        always deparsed faithfully (PR#15179).  Fixed in pqR as part of
        the rewrite of the parser and deparser.
  \item From R-3.2.2: Rscript and command line R silently ignored incomplete
        statements at the end of a script; now they are reported as parse errors
        (PR#16350).  Fixed in pqR as part of the rewrite of the parser
        and deparser.
  \item B
  \item C
  \item D
}}

  \subsection{BUG FIXES}{
  \itemize{
  \item A
  \item B
  \item C
  \item D
}}
}


\section{CHANGES IN VERSION RELEASED 2015-07-11}{

  \subsection{INTRODUCTION}{
  \itemize{ 
  \item This version is a minor modification of the version of pqR released
        on 2015-06-24, which does not have a separate NEWS section, 
        incorporating also the changes in the version released 2015-07-08.
        These modifications fix some installation and testing 
        issues that caused problems on some platforms. There are also a few
        documentation and bug fixes, a few more tests, and some expansion
        in the use of static boxes (see below).
        Version 2015-06-24 of pqR improved reliability and portability, and
        also contained some performance improvements, including some that
        substantially speed up interpretive execution of programs that 
        do many scalar operations.  Details are below.
}}

  \subsection{INSTALLATION}{
  \itemize{
  \item The method used to quickly test for NaN/NA has changed to one that
        should work universally for all current processors
        (any using IEEE floating point, as already assumed in R,
        with consistent endianness, as is apparently the case for 
        all current general-purpose processors, and was partially
        assumed before).  There is therefore no longer any reason to define
        the symbol \code{ENABLE_ISNAN_TRICK} when compiling pqR (it
        will be ignored if defined).
  \item The module used to support parallel computation in 